--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
+title: BTS Systèmes Numériques - Informatique et Réseaux
+description: Dépots/Repositories du BTS SNIR à Aubenas (07)
 theme: jekyll-theme-midnight
+github:
+  repository_url: https://github.com/SNIRAubenas
